Style for 991px ratio added

--- a/index.html
+++ b/index.html
@@ -99,6 +99,11 @@
             </form>
             <button class="header__cart"></button>
           </div>
+          <div class="header__btn-mobile">
+            <div class="header__line"></div>
+            <div class="header__line"></div>
+            <div class="header__line"></div>
+          </div>
         </div>
       </div>
     </header>
@@ -203,32 +208,38 @@
           <h2 class="menu__title title">Меню</h2>
           <div class="menu__tabs tabs">
             <div class="tabs__nav">
-              <button
-                class="tabs__nav-item tabs__nav-item--active"
-                data-tab="discounts"
-              >
-                Скидки
-              </button>
-              <button class="tabs__nav-item" data-tab="snacks">
-                Салаты/закуски
-              </button>
-              <button class="tabs__nav-item" data-tab="starters">
-                Первые блюда
-              </button>
-              <button class="tabs__nav-item" data-tab="main">
-                Вторые блюда
-              </button>
-              <button class="tabs__nav-item" data-tab="desserts">
-                Десерты
-              </button>
-              <button class="tabs__nav-item" data-tab="pizza">Пицца</button>
-              <button class="tabs__nav-item" data-tab="combo">
-                Комбо-обеды
-              </button>
-              <button class="tabs__nav-item" data-tab="sets">
-                Гастроконструкторы
-              </button>
-              <button class="tabs__nav-item" data-tab="drinks">Напитки</button>
+              <div class="tabs__line">
+                <button
+                  class="tabs__nav-item tabs__nav-item--active"
+                  data-tab="discounts"
+                >
+                  Скидки
+                </button>
+                <button class="tabs__nav-item" data-tab="snacks">
+                  Салаты/закуски
+                </button>
+                <button class="tabs__nav-item" data-tab="starters">
+                  Первые блюда
+                </button>
+                <button class="tabs__nav-item" data-tab="main">
+                  Вторые блюда
+                </button>
+                <button class="tabs__nav-item" data-tab="desserts">
+                  Десерты
+                </button>
+              </div>
+              <div class="tabs__line">
+                <button class="tabs__nav-item" data-tab="pizza">Пицца</button>
+                <button class="tabs__nav-item" data-tab="combo">
+                  Комбо-обеды
+                </button>
+                <button class="tabs__nav-item" data-tab="sets">
+                  Гастроконструкторы
+                </button>
+                <button class="tabs__nav-item" data-tab="drinks">
+                  Напитки
+                </button>
+              </div>
             </div>
             <div
               class="tabs__content tabs__content--active"
@@ -1420,6 +1431,9 @@
                 </p>
               </div>
             </div>
+            <div
+              class="swiper-pagination swiper-pagination-bullets swiper-pagination-horizontal"
+            ></div>
             <div class="feedback__prev"></div>
             <div class="feedback__next"></div>
           </div>
@@ -1543,6 +1557,7 @@
               </a>
             </li>
           </ul>
+          <div class="footer__mobile">Icetory©2021</div>
         </div>
       </div>
     </footer>
