Media for 768px and 576px added

--- a/index.html
+++ b/index.html
@@ -180,10 +180,12 @@
                   <h3 class="process__text-title">
                     Инновационная акустическая заморозка
                   </h3>
-                  Звуковые волны не позволяют формироваться крупным кристаллам
-                  льда, которые повреждают клеточную структуру продукта, ведут к
-                  потере влаги при размораживаниии, ухудшению струкруты и вкуса
-                  продуктов
+                  <div class="process__span">
+                    Звуковые волны не позволяют формироваться крупным кристаллам
+                    льда, которые повреждают клеточную структуру продукта, ведут
+                    к потере влаги при размораживаниии, ухудшению струкруты
+                    <br />и вкуса продуктов
+                  </div>
                 </div>
                 <img
                   src="/images/icons/frozen-sticker.png"
