Media for 320px added

--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
         <div class="container">
           <h2 class="menu__title title">Меню</h2>
           <div class="menu__tabs tabs">
-            <div class="tabs__nav">
-              <div class="tabs__line">
+            <div class="tabs__wrapper">
+              <div class="tabs__nav">
                 <button
                   class="tabs__nav-item tabs__nav-item--active"
                   data-tab="discounts"
@@ -229,8 +229,7 @@
                 <button class="tabs__nav-item" data-tab="desserts">
                   Десерты
                 </button>
-              </div>
-              <div class="tabs__line">
+
                 <button class="tabs__nav-item" data-tab="pizza">Пицца</button>
                 <button class="tabs__nav-item" data-tab="combo">
                   Комбо-обеды
