--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
       </div>
     </header>
     <main class="main">
+      <div class="overlay"></div>
       <section class="hero">
         <div class="container">
           <div class="hero__inner">
