--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
+    <div class="overlay"></div>
     <div class="cart">
       <div class="cart__title">Корзина</div>
       <button class="cart__close"></button>
@@ -122,7 +123,7 @@
             <form class="header__search">
               <input type="text" class="header__input" placeholder="Поиск" />
             </form>
-            <button class="header__cart"></button>
+            <button class="header__cart header__cart--visible"></button>
           </div>
           <div class="header__btn-mobile">
             <div class="header__line"></div>
@@ -133,7 +134,6 @@
       </div>
     </header>
     <main class="main">
-      <div class="overlay"></div>
       <section class="hero">
         <div class="container">
           <div class="hero__inner">
