Search answer added

--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
               <th class="table__title">Жиры</th>
               <th class="table__title">Углеводы</th>
             </tr>
-            <div class="table__row">
+            <tr class="table__row">
               <td class="table__data">101 г</td>
               <td class="table__data">250 ккал</td>
               <td class="table__data">10 г</td>
               <td class="table__data">17, 3 г</td>
               <td class="table__data">13, 9 г</td>
-            </div>
+            </tr>
           </table>
         </div>
       </div>
@@ -123,6 +123,26 @@
             <form class="header__search">
               <input type="text" class="header__input" placeholder="Поиск" />
             </form>
+            <div class="search">
+              <div class="search__item">
+                <img
+                  src="/images/content/cart-1.jpg"
+                  alt=""
+                  class="search__item-img"
+                />
+                <div class="search__item-name">Тар-тар из говядины</div>
+                <div class="search__item-price">800 ₽</div>
+              </div>
+              <div class="search__item">
+                <img
+                  src="/images/content/cart-1.jpg"
+                  alt=""
+                  class="search__item-img"
+                />
+                <div class="search__item-name">Тар-тар из говядины</div>
+                <div class="search__item-price">800 ₽</div>
+              </div>
+            </div>
             <button class="header__cart header__cart--visible"></button>
           </div>
           <div class="header__btn-mobile">
@@ -140,7 +160,7 @@
             <h1 class="hero__title">Между поваром и тобой - 5 минут</h1>
             <p class="hero__text">
               Первый бренд, полностью готовых ресторанных блюд
-              в&nbspзамороженном виде с помощью самой инновационной технологии
+              в&nbsp;замороженном виде с помощью самой инновационной технологии
               заморозки, которая полностью сохраняет структуру, все качества и
               вкус блюд после разогрева
             </p>
