Search answer added

--- a/index.html
+++ b/index.html
@@ -139,7 +139,9 @@
                   alt=""
                   class="search__item-img"
                 />
-                <div class="search__item-name">Тар-тар из говядины</div>
+                <div class="search__item-name">
+                  ОООоооооооооооооооочень длинное название
+                </div>
                 <div class="search__item-price">800 ₽</div>
               </div>
             </div>
