--- a/index.html
+++ b/index.html
@@ -145,7 +145,13 @@
                 <div class="search__item-price">800 ₽</div>
               </div>
             </div>
-            <button class="header__cart header__cart--visible"></button>
+            <button
+              class="header__cart header__cart--visible header__cart--filled"
+            >
+              <span class="header__cart-amount header__cart-amount--visible"
+                >255 ₽</span
+              >
+            </button>
           </div>
           <div class="header__btn-mobile">
             <div class="header__line"></div>
