--- a/index.html
+++ b/index.html
@@ -148,6 +148,9 @@
             <button
               class="header__cart header__cart--visible header__cart--filled"
             >
+              <span class="header__cart-name header__cart-name--visible"
+                >Корзина</span
+              >
               <span class="header__cart-amount header__cart-amount--visible"
                 >255 ₽</span
               >
