--- a/index.html
+++ b/index.html
@@ -1593,7 +1593,7 @@
           </ul>
           <ul class="footer__social">
             <li class="footer__social-item">
-              <a class="footer__social-link" href="#">
+              <a class="footer__social-link" href="#" target="_blank">
                 <img
                   class="footer__social-img"
                   src="/images/icons/social-icon-1.svg"
@@ -1602,7 +1602,7 @@
               </a>
             </li>
             <li class="footer__social-item">
-              <a class="footer__social-link" href="#">
+              <a class="footer__social-link" href="#" target="_blank">
                 <img
                   class="footer__social-img"
                   src="/images/icons/social-icon-2.svg"
