--- a/index.html
+++ b/index.html
@@ -7,6 +7,91 @@
     <title>Icetory</title>
     <link rel="stylesheet" href="/css/libs.min.css" />
     <link rel="stylesheet" href="/css/style.css" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="icon" sizes="16x16 32x32 64x64" href="/favicon.ico" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="196x196"
+      href="images/favicon/favicon-192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="160x160"
+      href="images/favicon/favicon-160.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="96x96"
+      href="images/favicon/favicon-96.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="64x64"
+      href="images/favicon/favicon-64.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="images/favicon/favicon-32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="images/favicon/favicon-16.png"
+    />
+    <link rel="apple-touch-icon" href="images/favicon/favicon-57.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="114x114"
+      href="images/favicon/favicon-114.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="72x72"
+      href="images/favicon/favicon-72.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="144x144"
+      href="images/favicon/favicon-144.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="60x60"
+      href="images/favicon/favicon-60.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="images/favicon/favicon-120.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="76x76"
+      href="images/favicon/favicon-76.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="images/favicon/favicon-152.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="images/favicon/favicon-180.png"
+    />
+    <meta name="msapplication-TileColor" content="#FFFFFF" />
+    <meta
+      name="msapplication-TileImage"
+      content="images/favicon/favicon-144.png"
+    />
+    <meta name="msapplication-config" content="/browserconfig.xml" />
   </head>
   <body>
     <div class="overlay"></div>
@@ -42,25 +127,30 @@
           <form class="address__form">
             <input
               type="text"
-              class="address__input address__street"
+              class="address__input address__street input"
               placeholder="Улица, номер дома"
             />
             <input
               type="text"
-              class="address__input"
+              class="address__input input"
               placeholder="Кв/офис"
             /><input
               type="text"
-              class="address__input"
+              class="address__input input"
               placeholder="Подъезд"
             /><input
               type="text"
-              class="address__input"
+              class="address__input input"
               placeholder="Этаж"
-            /><input type="text" class="address__input" placeholder="Домофон" />
+            />
             <input
               type="text"
-              class="address__input address__comment"
+              class="address__input input"
+              placeholder="Домофон"
+            />
+            <input
+              type="text"
+              class="address__input address__comment input"
               placeholder="Комментарий"
             />
           </form>
@@ -68,7 +158,7 @@
         <div class="order__date date">
           <div class="date__title">Дата и интервал доставки</div>
           <form class="date__form">
-            <input type="date" class="date__input date__calendar" />
+            <input type="date" class="date__calendar" />
             <div class="date__intervals">
               <input
                 type="radio"
@@ -107,30 +197,32 @@
         </div>
         <div class="order__pay pay">
           <div class="pay__title">Способ оплаты</div>
-          <input
-            type="radio"
-            name="interval"
-            class="pay__input"
-            id="card-online"
-            required
-          />
-          <label for="card-online" class="pay__label">Картой онлайн</label>
-          <input
-            type="radio"
-            name="interval"
-            id="cash"
-            class="pay__input"
-            required
-          />
-          <label for="cash" class="pay__label">Наличными</label>
-          <input
-            type="radio"
-            name="interval"
-            id="card-offline"
-            class="pay__input"
-            required
-          />
-          <label for="card-offline" class="pay__label">Картой курьеру</label>
+          <div class="pay__methods">
+            <input
+              type="radio"
+              name="interval"
+              class="pay__input"
+              id="card-online"
+              required
+            />
+            <label for="card-online" class="pay__label">Картой онлайн</label>
+            <input
+              type="radio"
+              name="interval"
+              id="cash"
+              class="pay__input"
+              required
+            />
+            <label for="cash" class="pay__label">Наличными</label>
+            <input
+              type="radio"
+              name="interval"
+              id="card-offline"
+              class="pay__input"
+              required
+            />
+            <label for="card-offline" class="pay__label">Картой курьеру</label>
+          </div>
         </div>
         <div class="order__bottom">
           <div class="order__title">Ваш заказ</div>
