Orders style media added

--- a/index.html
+++ b/index.html
@@ -242,7 +242,22 @@
         </div>
       </div>
     </div>
-    <div class="cart">
+    <div class="order order--success success">
+      <div class="order__wrapper order__wrapper--success">
+        <button class="order__close"></button>
+        <div class="success__title">Ваш заказ принят</div>
+        <p class="success__text">
+          Ожидайте нашего курьера в указанное время. В случае отсутствия
+          какого-либо товара в наличии, с вами свяжется менеджер для уточнения
+          состава заказа.
+        </p>
+        <div class="success__thanks">
+          Спасибо за заказ в Icetory! <br />Приятного аппетита!
+        </div>
+        <a href="/" class="success__back-btn">Вернуться на сайт</a>
+      </div>
+    </div>
+    <div class="shopping-cart cart">
       <div class="cart__title">Корзина</div>
       <button class="cart__close"></button>
       <div class="cart__items">
