--- a/index.html
+++ b/index.html
@@ -110,26 +110,26 @@
         // const searchInput = document.querySelector('.header__input');
         const searchAnswer = document.querySelector('.search');
 
-        const swiperStories = new Swiper('.stories__swiper', {
-          slidesPerView: 'auto',
-          freeMode: true,
-        });
-        const swiperFeedback = new Swiper('.feedback__swiper', {
-          slidesPerView: 1,
-          slidePerGroup: 1,
-          centeredSlides: true,
-          initialSlide: 1,
-          spaceBetween: 20,
-          grabCursor: true,
-          navigation: {
-            nextEl: '.feedback__next',
-            prevEl: '.feedback__prev',
-          },
-          pagination: {
-            el: '.swiper-pagination',
-            clickable: true,
-          },
-        });
+        // const swiperStories = new Swiper('.stories__swiper', {
+        //   slidesPerView: 'auto',
+        //   freeMode: true,
+        // });
+        // const swiperFeedback = new Swiper('.feedback__swiper', {
+        //   slidesPerView: 1,
+        //   slidePerGroup: 1,
+        //   centeredSlides: true,
+        //   initialSlide: 1,
+        //   spaceBetween: 20,
+        //   grabCursor: true,
+        //   navigation: {
+        //     nextEl: '.feedback__next',
+        //     prevEl: '.feedback__prev',
+        //   },
+        //   pagination: {
+        //     el: '.swiper-pagination',
+        //     clickable: true,
+        //   },
+        // });
 
         const openCart = function () {
           cart.classList.add('cart--visible');
